--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 			// body...
 			txt="<table>";
 			for (var i=0;i<result.length;i++){
-				txt+="<tr>"+result[i]+"</tr><br/>";
+				var link="http://localhost:8000/ir_project/"+result[i];
+				console.log(link);
+				txt+="<a href="+link+">"+"<tr>"+result[i]+"</tr></a><br/>";
 			}
 			txt+="</table>";
 			console.log(txt);
